--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,21 +1,36 @@
+## Plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g mode-keys vi
+set -g prefix M-s
+bind -n M-s send-prefix
+set -g mouse on
+set -g base-index 1
+
+bind r source-file ~/.config/tmux/tmux.conf
+bind v split-window -v
+bind h split-window -h
+bind t new-window
+
+#nvim settings
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # navigation
 set -g @tmux-nvim-navigation true
 set -g @tmux-nvim-navigation-cycle true
-set -g @tmux-nvim-navigation-keybinding-left 'C-h'
-set -g @tmux-nvim-navigation-keybinding-down 'C-j'
-set -g @tmux-nvim-navigation-keybinding-up 'C-k'
-set -g @tmux-nvim-navigation-keybinding-right 'C-l'
+set -g @tmux-nvim-navigation-keybinding-left 'M-h'
+set -g @tmux-nvim-navigation-keybinding-down 'M-j'
+set -g @tmux-nvim-navigation-keybinding-up 'M-k'
+set -g @tmux-nvim-navigation-keybinding-right 'M-l'
 
 # resize
 set -g @tmux-nvim-resize true
 set -g @tmux-nvim-resize-step-x 1
 set -g @tmux-nvim-resize-step-y 1
-set -g @tmux-nvim-resize-keybinding-left 'M-h'
-set -g @tmux-nvim-resize-keybinding-down 'M-j'
-set -g @tmux-nvim-resize-keybinding-up 'M-k'
-set -g @tmux-nvim-resize-keybinding-right 'M-l'
+set -g @tmux-nvim-resize-keybinding-left 'M-H'
+set -g @tmux-nvim-resize-keybinding-down 'M-J'
+set -g @tmux-nvim-resize-keybinding-up 'M-K'
+set -g @tmux-nvim-resize-keybinding-right 'M-L'
 
 run '~/.tmux/plugins/tpm/tpm'
