--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,11 @@
 ## Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
+set -g @plugin 'bobcats/everforest-tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @everforest_theme 'dark-hard' # Sets the option to select the theme. Also the default.
+set -g @resurrect-strategy-nvim 'session'
 
 set -g mode-keys vi
 set -g prefix M-s
