--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,9 +3,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
 set -g @plugin 'bobcats/everforest-tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @everforest_theme 'dark-hard' # Sets the option to select the theme. Also the default.
 set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-dir '$HOME/.config/tmux/resurrect/'
+set -g @continuum-restore 'on'
 
 set -g mode-keys vi
 set -g prefix M-s
@@ -18,7 +22,11 @@ bind v split-window -v
 bind h split-window -h
 bind t new-window
 
-#nvim settings
+# ressurect keybindings
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
+# nvim settings
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # navigation
