--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,6 +26,18 @@ bind t new-window
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
+# selecting windows
+bind-key -n M-1 selectw -t 1
+bind-key -n M-2 selectw -t 2
+bind-key -n M-3 selectw -t 3
+bind-key -n M-4 selectw -t 4
+bind-key -n M-5 selectw -t 5
+bind-key -n M-6 selectw -t 6
+bind-key -n M-7 selectw -t 7
+bind-key -n M-8 selectw -t 8
+bind-key -n M-9 selectw -t 9
+bind-key -n M-0 selectw -t 0
+
 # nvim settings
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
