--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,8 +18,8 @@ set -g mouse on
 set -g base-index 1
 
 bind r source-file ~/.config/tmux/tmux.conf
-bind v split-window -v
-bind h split-window -h
+bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 bind t new-window
 
 # ressurect keybindings
