--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,15 +1,40 @@
 ## Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
-set -g @plugin 'bobcats/everforest-tmux'
+set -g @plugin 'o0th/tmux-nova'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'jonmosco/kube-tmux'
 
 set -g @everforest_theme 'dark-hard' # Sets the option to select the theme. Also the default.
+set -g @everforest_window_tabs_enabled on # or off to disable window_tabs
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-dir '$HOME/.config/tmux/resurrect/'
 set -g @continuum-restore 'on'
+
+# Nova theme
+set -g @nova-nerdfonts true
+set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonts-right 
+set -g @nova-padding 0 
+
+set -g @nova-pane "#I  #{b:pane_current_path}"
+
+set -g @nova-pane-active-border-style "#A7C080"
+set -g @nova-pane-border-style "#3D484D"
+set -g @nova-status-style-bg "#2D353B"
+set -g @nova-status-style-fg "#D3C6AA"
+set -g @nova-status-style-active-bg "#A7C080"
+set -g @nova-status-style-active-fg "#2D353B"
+set -g @nova-status-style-double-bg "#2D353B"
+
+set -g @nova-segment-kube "󰆧  #(/bin/bash ~/.config/tmux/plugins/kube-tmux/kube.tmux 250 red black | cut -d / -f2)"
+set -g @nova-segment-kube-colors "#A7C080 #2D353B"
+
+set -g @nova-segments-0-right "kube"
+
+set -g status-interval 2
 
 set -g mode-keys vi
 set -g prefix M-s
