added nvim tree binds for hjkl

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -g @continuum-restore 'on'
 # Nova theme
 set -g @nova-nerdfonts true
 set -g @nova-nerdfonts-left 
-set -g @nova-nerdfonts-right 
+set -g @nova-nerdfonts-right 
 set -g @nova-padding 0 
 
 set -g @nova-pane "#I  #{b:pane_current_path}"
@@ -24,7 +24,7 @@ set -g @nova-pane "#I  #{b:pane_current_path}"
 set -g @nova-pane-active-border-style "#A7C080"
 set -g @nova-pane-border-style "#3D484D"
 set -g @nova-status-style-bg "#2D353B"
-set -g @nova-status-style-fg "#D3C6AA"
+set -g @nova-status-style-fg "#859289"
 set -g @nova-status-style-active-bg "#A7C080"
 set -g @nova-status-style-active-fg "#2D353B"
 set -g @nova-status-style-double-bg "#2D353B"
