added vi-style copy mode to tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,6 +42,12 @@ bind -n M-s send-prefix
 set -g mouse on
 set -g base-index 1
 
+# vim-like copy mode
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind p paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
 bind r source-file ~/.config/tmux/tmux.conf
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
@@ -76,8 +82,8 @@ set -g @tmux-nvim-navigation-keybinding-right 'M-l'
 
 # resize
 set -g @tmux-nvim-resize true
-set -g @tmux-nvim-resize-step-x 1
-set -g @tmux-nvim-resize-step-y 1
+set -g @tmux-nvim-resize-step-x 2
+set -g @tmux-nvim-resize-step-y 2
 set -g @tmux-nvim-resize-keybinding-left 'M-H'
 set -g @tmux-nvim-resize-keybinding-down 'M-J'
 set -g @tmux-nvim-resize-keybinding-up 'M-K'
