--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,7 +29,7 @@ set -g @nova-status-style-active-bg "#A7C080"
 set -g @nova-status-style-active-fg "#2D353B"
 set -g @nova-status-style-double-bg "#2D353B"
 
-set -g @nova-segment-kube "󰆧  #(/bin/bash ~/.config/tmux/plugins/kube-tmux/kube.tmux 250 red black | cut -d / -f2)"
+set -g @nova-segment-kube "󰆧  #(/bin/bash ~/.config/tmux/plugins/kube-tmux/kube.tmux 250 red black | cut -d / -f2- | cut -d# -f1)"
 set -g @nova-segment-kube-colors "#A7C080 #2D353B"
 
 set -g @nova-segments-0-right "kube"
