--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,7 +48,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind p paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 bind t new-window
@@ -68,6 +68,8 @@ bind-key -n M-7 selectw -t 7
 bind-key -n M-8 selectw -t 8
 bind-key -n M-9 selectw -t 9
 bind-key -n M-0 selectw -t 0
+bind-key -n M-Tab selectw -n
+bind-key -n M-BTab selectw -p
 
 # nvim settings
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -82,7 +84,7 @@ set -g @tmux-nvim-navigation-keybinding-right 'M-l'
 
 # resize
 set -g @tmux-nvim-resize true
-set -g @tmux-nvim-resize-step-x 2
+set -g @tmux-nvim-resize-step-x 4
 set -g @tmux-nvim-resize-step-y 2
 set -g @tmux-nvim-resize-keybinding-left 'M-H'
 set -g @tmux-nvim-resize-keybinding-down 'M-J'
