separated keybinds for find files and project files

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,7 +19,7 @@ set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 set -g @nova-padding 0 
 
-set -g @nova-pane "#I  #{b:pane_current_path}"
+set -g @nova-pane "#I  #W"
 
 set -g @nova-pane-active-border-style "#A7C080"
 set -g @nova-pane-border-style "#3D484D"
