--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,7 +37,7 @@ set -g @nova-segments-0-right "kube"
 set -g status-interval 2
 
 set -g mode-keys vi
-set -g prefix M-s
+set -g prefix C-s
 bind -n M-s send-prefix
 set -g mouse on
 set -g base-index 1
@@ -45,8 +45,8 @@ set -g base-index 1
 # vim-like copy mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind p paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind p paste-buffer
 
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 bind v split-window -v -c "#{pane_current_path}"
@@ -63,18 +63,21 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)
 # navigation
 set -g @tmux-nvim-navigation true
 set -g @tmux-nvim-navigation-cycle true
-set -g @tmux-nvim-navigation-keybinding-left 'M-h'
-set -g @tmux-nvim-navigation-keybinding-down 'M-j'
-set -g @tmux-nvim-navigation-keybinding-up 'M-k'
-set -g @tmux-nvim-navigation-keybinding-right 'M-l'
+set -g @tmux-nvim-navigation-keybinding-left 'C-h'
+set -g @tmux-nvim-navigation-keybinding-down 'C-j'
+set -g @tmux-nvim-navigation-keybinding-up 'C-k'
+set -g @tmux-nvim-navigation-keybinding-right 'C-l'
 
 # resize
 set -g @tmux-nvim-resize true
 set -g @tmux-nvim-resize-step-x 4
 set -g @tmux-nvim-resize-step-y 2
-set -g @tmux-nvim-resize-keybinding-left 'M-H'
-set -g @tmux-nvim-resize-keybinding-down 'M-J'
-set -g @tmux-nvim-resize-keybinding-up 'M-K'
-set -g @tmux-nvim-resize-keybinding-right 'M-L'
+set -g @tmux-nvim-resize-keybinding-left 'C-M-h'
+set -g @tmux-nvim-resize-keybinding-down 'C-M-j'
+set -g @tmux-nvim-resize-keybinding-up 'C-M-k'
+set -g @tmux-nvim-resize-keybinding-right 'C-M-l'
+
+# disable swap
+set -g @tmux-nvim-swap false
 
 run '~/.tmux/plugins/tpm/tpm'
