updated tmux prefix

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,7 +38,7 @@ set -g status-interval 2
 
 set -g mode-keys vi
 set -g prefix C-s
-bind -n M-s send-prefix
+bind -n C-s send-prefix
 set -g mouse on
 set -g base-index 1
 
