--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -98,7 +98,7 @@ automatically-unhide-macos-hidden-apps = true
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
     alt-h = 'focus left --boundaries-action wrap-around-the-workspace'
-    alt-j = 'focus down --boundaries-action wrap-around-the-workspace
+    alt-j = 'focus down --boundaries-action wrap-around-the-workspace'
     alt-k = 'focus up --boundaries-action wrap-around-the-workspace'
     alt-l = 'focus right --boundaries-action wrap-around-the-workspace'
 
@@ -134,6 +134,7 @@ automatically-unhide-macos-hidden-apps = true
     alt-shift-7 = 'move-node-to-workspace 7'
     alt-shift-8 = 'move-node-to-workspace 8'
     alt-shift-9 = 'move-node-to-workspace 9'
+    alt-shift-0 = 'move-node-to-workspace 0'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     alt-tab = 'workspace-back-and-forth'
