added c-w hjkl to tmux and vim

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,8 +37,8 @@ set -g @nova-segments-0-right "kube"
 set -g status-interval 2
 
 set -g mode-keys vi
-set -g prefix C-s
-bind -n C-s send-prefix
+set -g prefix C-w
+bind -n C-w send-prefix
 set -g mouse on
 set -g base-index 1
 
@@ -50,7 +50,7 @@ bind p paste-buffer
 
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 bind v split-window -v -c "#{pane_current_path}"
-bind h split-window -h -c "#{pane_current_path}"
+bind x kill-pane
 bind t new-window
 
 # ressurect keybindings
@@ -67,6 +67,11 @@ set -g @tmux-nvim-navigation-keybinding-left 'C-h'
 set -g @tmux-nvim-navigation-keybinding-down 'C-j'
 set -g @tmux-nvim-navigation-keybinding-up 'C-k'
 set -g @tmux-nvim-navigation-keybinding-right 'C-l'
+
+bind-key h if-shell "$is_vim" "send-keys C-w h"  "select-pane -L"
+bind-key j if-shell "$is_vim" "send-keys C-w j"  "select-pane -D"
+bind-key k if-shell "$is_vim" "send-keys C-w k"  "select-pane -U"
+bind-key l if-shell "$is_vim" "send-keys C-w l"  "select-pane -R"
 
 # resize
 set -g @tmux-nvim-resize true
