--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,7 +45,7 @@ set -g base-index 1
 # vim-like copy mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear "pbcopy"
 bind p paste-buffer
 
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
@@ -84,5 +84,16 @@ set -g @tmux-nvim-resize-keybinding-right 'C-M-l'
 
 # disable swap
 set -g @tmux-nvim-swap false
+
+bind-key -n C-0 select-window -t :0
+bind-key -n C-1 select-window -t :1
+bind-key -n C-2 select-window -t :2
+bind-key -n C-3 select-window -t :3
+bind-key -n C-4 select-window -t :4
+bind-key -n C-5 select-window -t :5
+bind-key -n C-6 select-window -t :6
+bind-key -n C-7 select-window -t :7
+bind-key -n C-8 select-window -t :8
+bind-key -n C-9 select-window -t :9
 
 run '~/.tmux/plugins/tpm/tpm'
