--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,37 +2,17 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
 set -g @plugin 'o0th/tmux-nova'
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'jonmosco/kube-tmux'
 
-set -g @everforest_theme 'dark-hard' # Sets the option to select the theme. Also the default.
-set -g @everforest_window_tabs_enabled on # or off to disable window_tabs
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-dir '$HOME/.config/tmux/resurrect/'
 set -g @continuum-restore 'on'
 
-# Nova theme
-set -g @nova-nerdfonts true
-set -g @nova-nerdfonts-left 
-set -g @nova-nerdfonts-right 
-set -g @nova-padding 0 
-
-set -g @nova-pane "#I  #W"
-
-set -g @nova-pane-active-border-style "#A7C080"
-set -g @nova-pane-border-style "#3D484D"
-set -g @nova-status-style-bg "#2D353B"
-set -g @nova-status-style-fg "#859289"
-set -g @nova-status-style-active-bg "#A7C080"
-set -g @nova-status-style-active-fg "#2D353B"
-set -g @nova-status-style-double-bg "#2D353B"
-
-set -g @nova-segment-kube "󰆧  #(/bin/bash ~/.config/tmux/plugins/kube-tmux/kube.tmux 250 red black | cut -d / -f2- | cut -d# -f1)"
-set -g @nova-segment-kube-colors "#A7C080 #2D353B"
-
-set -g @nova-segments-0-right "kube"
+source-file ~/.config/tmux/nova.tmux
 
 set -g status-interval 2
 
@@ -42,6 +22,8 @@ bind -n C-w send-prefix
 set -g mouse on
 set -g base-index 1
 
+TMUX_FZF_LAUNCH_KEY="f"
+
 # vim-like copy mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
@@ -49,6 +31,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear "pbc
 bind p paste-buffer
 
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
+bind w run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch"
 bind v split-window -v -c "#{pane_current_path}"
 bind x kill-pane
 bind t new-window
