--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -g prefix C-w
 bind -n C-w send-prefix
 set -g mouse on
 set -g base-index 1
+set -g pane-base-index 1
 
 TMUX_FZF_LAUNCH_KEY="f"
 
@@ -67,16 +68,5 @@ set -g @tmux-nvim-resize-keybinding-right 'C-M-l'
 
 # disable swap
 set -g @tmux-nvim-swap false
-
-bind-key -n C-0 select-window -t :0
-bind-key -n C-1 select-window -t :1
-bind-key -n C-2 select-window -t :2
-bind-key -n C-3 select-window -t :3
-bind-key -n C-4 select-window -t :4
-bind-key -n C-5 select-window -t :5
-bind-key -n C-6 select-window -t :6
-bind-key -n C-7 select-window -t :7
-bind-key -n C-8 select-window -t :8
-bind-key -n C-9 select-window -t :9
 
 run '~/.tmux/plugins/tpm/tpm'
