--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,7 +34,7 @@ bind p paste-buffer
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 bind w run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch"
 bind v split-window -v -c "#{pane_current_path}"
-bind V split-window -v -c "#{pane_current_path}"
+bind V split-window -h -c "#{pane_current_path}"
 bind x kill-pane
 bind t new-window
 
