--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,7 +23,14 @@ set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 
+# tmux-fzf
 TMUX_FZF_LAUNCH_KEY="f"
+TMUX_FZF_WINDOW_FORMAT="#W"
+TMUX_FZF_SWITCH_CURRENT=1
+TMUX_FZF_PREVIEW=0
+TMUX_FZF_MENU_POPUP=1
+TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m"
+bind w run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
 # vim-like copy mode
 bind -T copy-mode-vi v send -X begin-selection
@@ -32,9 +39,8 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear "pbc
 bind p paste-buffer
 
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
-bind w run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch"
-bind v split-window -v -c "#{pane_current_path}"
-bind V split-window -h -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind V split-window -v -c "#{pane_current_path}"
 bind x kill-pane
 bind t new-window
 
