added pane active pane highlighting

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,6 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
 set -g @plugin 'o0th/tmux-nova'
-set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'jonmosco/kube-tmux'
@@ -14,6 +13,7 @@ set -g @continuum-restore 'on'
 
 source-file ~/.config/tmux/nova.tmux
 
+set -g focus-events on
 set -g status-interval 2
 
 set -g mode-keys vi
@@ -22,15 +22,6 @@ bind -n C-w send-prefix
 set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
-
-# tmux-fzf
-TMUX_FZF_LAUNCH_KEY="f"
-TMUX_FZF_WINDOW_FORMAT="#W"
-TMUX_FZF_SWITCH_CURRENT=1
-TMUX_FZF_PREVIEW=0
-TMUX_FZF_MENU_POPUP=1
-TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m"
-bind w run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
 # vim-like copy mode
 bind -T copy-mode-vi v send -X begin-selection
@@ -43,6 +34,7 @@ bind v split-window -h -c "#{pane_current_path}"
 bind V split-window -v -c "#{pane_current_path}"
 bind x kill-pane
 bind t new-window
+bind -n C-\; last-window
 
 # ressurect keybindings
 set -g @resurrect-save 'S'
@@ -73,7 +65,15 @@ set -g @tmux-nvim-resize-keybinding-down 'C-M-j'
 set -g @tmux-nvim-resize-keybinding-up 'C-M-k'
 set -g @tmux-nvim-resize-keybinding-right 'C-M-l'
 
+# swap
+set -g @tmux-nvim-swap true
+set -g @tmux-nvim-swap-cycle true
+set -g @tmux-nvim-swap-keybinding-left 'C-S-H'
+set -g @tmux-nvim-swap-keybinding-down 'C-S-J'
+set -g @tmux-nvim-swap-keybinding-up 'C-S-K'
+set -g @tmux-nvim-swap-keybinding-right 'C-S-L'
+
 # disable swap
-set -g @tmux-nvim-swap false
+set -g @tmux-nvim-swap true
 
 run '~/.tmux/plugins/tpm/tpm'
