--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,8 +17,8 @@ set -g focus-events on
 set -g status-interval 2
 
 set -g mode-keys vi
-set -g prefix C-w
-bind -n C-w send-prefix
+set -g prefix M-Space
+bind M-Space send-prefix
 set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
@@ -34,6 +34,7 @@ bind v split-window -h -c "#{pane_current_path}"
 bind V split-window -v -c "#{pane_current_path}"
 bind x kill-pane
 bind t new-window
+bind f resize-pane -Z
 bind -n C-\; last-window
 
 # ressurect keybindings
