disabled tmux-nvim-swap

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -66,4 +66,6 @@ set -g @tmux-nvim-resize-keybinding-down 'C-M-j'
 set -g @tmux-nvim-resize-keybinding-up 'C-M-k'
 set -g @tmux-nvim-resize-keybinding-right 'C-M-l'
 
+set -g @tmux-nvim-swap false
+
 run '~/.tmux/plugins/tpm/tpm'
