--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,8 @@
 ## Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'aserowy/tmux.nvim'
-set -g @plugin 'o0th/tmux-nova'
+# set -g @plugin 'o0th/tmux-nova'
+set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'jonmosco/kube-tmux'
@@ -11,7 +12,8 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-dir '$HOME/.config/tmux/resurrect/'
 set -g @continuum-restore 'on'
 
-source-file ~/.config/tmux/nova.tmux
+# source-file ~/.config/tmux/nova.tmux
+source-file ~/.config/tmux/dotbar.tmux
 
 set -g focus-events on
 set -g status-interval 2
@@ -36,6 +38,8 @@ bind x kill-pane
 bind t new-window
 bind f resize-pane -Z
 bind -n C-\; last-window
+bind -n C-n next-window
+bind -n C-p previous-window
 
 # ressurect keybindings
 set -g @resurrect-save 'S'
