--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -22,6 +22,7 @@ set -g mode-keys vi
 set -g prefix M-Space
 bind M-Space send-prefix
 set -g mouse on
+set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 
